--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -51,6 +51,7 @@ jobs:
       - run: |
           julia --project=docs -e '
             using Documenter: doctest
+            using LaTeXStrings
             using CamiXon
             doctest(CamiXon)'
       - run: julia --project=docs docs/make.jl
