--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -1,3 +1,4 @@
 [deps]
 CamiXon = "e90a53f3-3599-4ebe-999f-6f75af03d43f"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
+FITSIO = "525bcba6-941b-5504-bd06-fd0dc1a4d2eb"
