--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -48,7 +48,8 @@ jobs:
             using Pkg
             Pkg.develop(PackageSpec(path=pwd()))
             Pkg.instantiate()
-            Pkg.add("LaTeXStrings")'
+            Pkg.add("LaTeXStrings")
+            Pkg.add("FITSIO")'
       - run: |
           julia --project=docs -e '
             using Documenter: doctest
