--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -47,9 +47,7 @@ jobs:
           julia --project=docs -e '
             using Pkg
             Pkg.develop(PackageSpec(path=pwd()))
-            Pkg.instantiate()
-            Pkg.add("LaTeXStrings")
-            Pkg.add("FITSIO")'
+            Pkg.instantiate()'
       - run: |
           julia --project=docs -e '
             using FITSIO
