--- a/Project.toml
+++ b/Project.toml
@@ -7,7 +7,7 @@ version = "1.1.7"
 FITSIO = "525bcba6-941b-5504-bd06-fd0dc1a4d2eb"
 
 [compat]
-FITSIO = "0.16"
+#FITSIO = "0.16"
 julia = "1"
 
 [extras]
