--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -50,6 +50,7 @@ jobs:
       - run: |
           julia --project=docs -e '
             using Documenter: doctest
+            using Dates
             using CamiXon
             doctest(CamiXon)'
       - run: julia --project=docs docs/make.jl
