--- a/Project.toml
+++ b/Project.toml
@@ -1,10 +1,13 @@
 name = "CamiXon"
 uuid = "e90a53f3-3599-4ebe-999f-6f75af03d43f"
 authors = ["= <walra356@planet.nl> and contributors"]
-version = "1.3.6"
+version = "1.3.7"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+AbstractPlotting = "537997a7-5e4e-5d89-9595-2241ea00577e"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
+LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 
 [compat]
 julia = "1"
