--- a/docs/Project.toml
+++ b/docs/Project.toml
@@ -3,4 +3,6 @@ CamiXon = "e90a53f3-3599-4ebe-999f-6f75af03d43f"
 Documenter = "e30172f5-a6a5-5a46-863b-614d45cd2de4"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+AbstractPlotting = "537997a7-5e4e-5d89-9595-2241ea00577e"
+GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 
