--- a/Project.toml
+++ b/Project.toml
@@ -6,7 +6,7 @@ version = "1.3.7"
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 #GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
-LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+#LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 
 [compat]
 julia = "1"
