--- a/Project.toml
+++ b/Project.toml
@@ -9,6 +9,7 @@ GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
 #LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 
 [compat]
+GLMakie = "0.2.9"
 julia = "1"
 
 [extras]
