simpler  Pkg.precompile()

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -47,7 +47,7 @@ jobs:
             using Pkg
             Pkg.develop(PackageSpec(path=pwd()))
             Pkg.instantiate()
-            Pkg.precompile("GLMakie")'
+            Pkg.precompile()'
       - run: |
           julia --project=docs -e '
             using Documenter: doctest
