--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,7 @@ LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 [compat]
 GLMakie = "0.2.9"
 julia = "1"
+LaTeXStrings = "1.2.1"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
