added using AbstractPlotting to CamiXon

--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -46,8 +46,7 @@ jobs:
           julia --project=docs -e '
             using Pkg
             Pkg.develop(PackageSpec(path=pwd()))
-            Pkg.instantiate()
-            Pkg.precompile()'
+            Pkg.instantiate()'              # Pkg.precompile()
       - run: |
           julia --project=docs -e '
             using Documenter: doctest
