--- a/Project.toml
+++ b/Project.toml
@@ -5,13 +5,11 @@ version = "1.3.11"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
-GLMakie = "e9467ef8-e4e7-5192-8a1a-b1aee30e663a"
-#AbstractPlotting = "537997a7-5e4e-5d89-9595-2241ea00577e"
+AbstractPlotting = "537997a7-5e4e-5d89-9595-2241ea00577e"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 
 [compat]
-GLMakie = "0.2.9"
-#AbstractPlotting = "0.18"
+AbstractPlotting = "0.18"
 LaTeXStrings = "1.2.1"
 julia = "1"
 
