--- a/Project.toml
+++ b/Project.toml
@@ -5,7 +5,8 @@ version = "1.3.17"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
-AbstractPlotting = "537997a7-5e4e-5d89-9595-2241ea00577e"
+#AbstractPlotting = "537997a7-5e4e-5d89-9595-2241ea00577e"
+Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 
 [compat]
