--- a/Project.toml
+++ b/Project.toml
@@ -5,12 +5,13 @@ version = "1.3.19"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
-#AbstractPlotting = "537997a7-5e4e-5d89-9595-2241ea00577e"
 Makie = "ee78f7c6-11fb-53f2-987a-cfe4a2b5a57a"
+IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 
 [compat]
-Makie = "0.13.1"
+Makie = "0.13.14"
+IntervalSets = "0.5.3"
 LaTeXStrings = "1.2.1"
 julia = "1"
 
