--- a/Project.toml
+++ b/Project.toml
@@ -8,12 +8,12 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 #LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-LinearAlgebraX = "9b3f67b0-2d00-526e-9884-9e4938f8fb88"
+LinearAlgebra = "9b3f67b0-2d00-526e-9884-9e4938f8fb88"
 
 [compat]
 IntervalSets = "0.5.3"
 LaTeXStrings = "1.2.1"
-LinearAlgebraX = "1.7.0"
+LinearAlgebra = "1.7.0"
 julia = "1"
 
 [extras]
