--- a/Project.toml
+++ b/Project.toml
@@ -1,17 +1,17 @@
 name = "CamiXon"
 uuid = "e90a53f3-3599-4ebe-999f-6f75af03d43f"
 authors = ["= <walra356@planet.nl> and contributors"]
-version = "1.4.13" 
+version = "1.4.13"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
-LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
+#LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 
 [compat]
 IntervalSets = "0.5.3"
-LaTeXStrings = "1.2.1"
+#LaTeXStrings = "1.2.1"
 LinearAlgebra = "1.6.1"
 julia = "1"
 
