--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -45,6 +45,7 @@ jobs:
       - run: |
           julia --project=docs -e '
             using Pkg
+            Pkg.upgrade_manifest()
             Pkg.develop(PackageSpec(path=pwd()))
             Pkg.instantiate()'              # Pkg.precompile()
       - run: |
