--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "CamiXon"
 uuid = "e90a53f3-3599-4ebe-999f-6f75af03d43f"
 authors = ["= <walra356@planet.nl> and contributors"]
-version = "1.5.9"
+version = "1.5.10"
 
 [deps]
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
@@ -10,9 +10,9 @@ IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 
 [compat]
-IntervalSets = "0.5.3"
+IntervalSets = "0.6.0" # "0.5.3"
 #LaTeXStrings = "1.2.1"
-LinearAlgebra = "1.6.1"
+LinearAlgebra = "1.7.2" # "1.6.1"
 julia = "1"
 
 [extras]
