--- a/Project.toml
+++ b/Project.toml
@@ -10,9 +10,9 @@ IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 
 [compat]
-IntervalSets = "0.6.0" # "0.5.3"
+IntervalSets = "0.6.0" 
 #LaTeXStrings = "1.2.1"
-LinearAlgebra = "1.7.2" # "1.6.1"
+LinearAlgebra = "1.7.2"
 julia = "1.6"
 
 [extras]
