--- a/Project.toml
+++ b/Project.toml
@@ -15,7 +15,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 #IntervalSets = "0.6.0"
 #LaTeXStrings = "1.2.1"
 #LinearAlgebra = "1.8.0"
-#julia = "1.8"
+julia = "1.8"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
