--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 FreeTypeAbstraction = "0.9.9"
 MathTeXEngine = "0.4.3"
 RelocatableFolders = "0.3.0"
-#julia = "1.8"
+julia = "1.8"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
