--- a/Project.toml
+++ b/Project.toml
@@ -11,6 +11,8 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 #LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 RelocatableFolders = "05181044-ff0b-4ac5-8273-598c1e38db00"
+FreeTypeAbstraction = "663a7486-cb36-511b-a19d-713bb74d65c9"
+MathTeXEngine = "0a4f8689-d25c-4efe-a92b-7142dfc1aa53"
 
 [compat]
 #IntervalSets = "0.6.0"
