--- a/Project.toml
+++ b/Project.toml
@@ -18,10 +18,11 @@ MathTeXEngine = "0a4f8689-d25c-4efe-a92b-7142dfc1aa53"
 #IntervalSets = "0.6.0"
 #LaTeXStrings = "1.2.1"
 #LinearAlgebra = "1.8.0"
-FreeTypeAbstraction = "0.9.9"
-MathTeXEngine = "0.4.3"
-RelocatableFolders = "0.3.0"
+#FreeTypeAbstraction = "0.9.9"
+#MathTeXEngine = "0.4.3"
+#RelocatableFolders = "0.3.0"
 julia = "1.8"
+#CamiXon = "1.7.20"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
