--- a/Project.toml
+++ b/Project.toml
@@ -10,9 +10,9 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 #IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
 #LaTeXStrings = "b964fa9f-0449-5b57-a5c2-d3ea65f4040f"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-RelocatableFolders = "05181044-ff0b-4ac5-8273-598c1e38db00"
-FreeTypeAbstraction = "663a7486-cb36-511b-a19d-713bb74d65c9"
-MathTeXEngine = "0a4f8689-d25c-4efe-a92b-7142dfc1aa53"
+#RelocatableFolders = "05181044-ff0b-4ac5-8273-598c1e38db00"
+#FreeTypeAbstraction = "663a7486-cb36-511b-a19d-713bb74d65c9"
+#MathTeXEngine = "0a4f8689-d25c-4efe-a92b-7142dfc1aa53"
 
 [compat]
 #IntervalSets = "0.6.0"
@@ -21,8 +21,8 @@ MathTeXEngine = "0a4f8689-d25c-4efe-a92b-7142dfc1aa53"
 #FreeTypeAbstraction = "0.9.9"
 #MathTeXEngine = "0.4.3"
 #RelocatableFolders = "0.3.0"
+CamiXon = "1.7.20"
 julia = "1.8"
-#CamiXon = "1.7.20"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
