--- a/Project.toml
+++ b/Project.toml
@@ -1,7 +1,7 @@
 name = "CamiXon"
 uuid = "e90a53f3-3599-4ebe-999f-6f75af03d43f"
 authors = ["= <walra356@planet.nl> and contributors"]
-version = "1.7.30"
+version = "1.7.29"
 
 [deps]
 ### Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
@@ -21,7 +21,7 @@ LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 #FreeTypeAbstraction = "0.9.9"
 #MathTeXEngine = "0.4.3"
 #RelocatableFolders = "0.3.0"
-julia = "1.8"
+#julia = "1.8"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
