--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -11,6 +11,7 @@ jobs:
       matrix:
         version:
           - '1.8'
+          - nightly
         os:
           - windows-latest
         arch:
