--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "julia.NumThreads": 0,
-    "julia.environmentPath": "c:\\Users\\walra\\.julia\\dev\\CamiXon.jl"
+    "julia.NumThreads": 0
 }
