--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,4 @@
 {
-    "julia.NumThreads": 0
+    "julia.NumThreads": 0,
+    "julia.environmentPath": "c:\\Users\\walra\\.julia\\dev\\CamiXon.jl"
 }
