--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -1,7 +1,10 @@
 name: CI
 on:
-  - push
-  - pull_request
+  pull_request:
+  push:
+    branches:
+      - main
+    tags: '*'
 jobs:
   test:
     name: Julia ${{ matrix.version }} - ${{ matrix.os }} - ${{ matrix.arch }} - ${{ github.event_name }}
@@ -10,19 +13,22 @@ jobs:
       fail-fast: false
       matrix:
         version:
-          - '1.8'
-          - nightly
+          - '1.6'     # LTS
+          - '1'       # current stable
+          - 'nightly'
         os:
+          - ubuntu-latest
+          - macOS-latest
           - windows-latest
         arch:
           - x64
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: julia-actions/setup-julia@v1
         with:
           version: ${{ matrix.version }}
           arch: ${{ matrix.arch }}
-      - uses: actions/cache@v1
+      - uses: actions/cache@v3
         env:
           cache-name: cache-artifacts
         with:
@@ -34,26 +40,35 @@ jobs:
             ${{ runner.os }}-
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
+      - uses: julia-actions/julia-processcoverage@v1
+      - uses: codecov/codecov-action@v3
+        with:
+          file: lcov.info
+
   docs:
-    name: Documentation
+    name: 'Documentation: ${{ matrix.format }}'
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        format:
+          - html
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
+        name: Check out repository
+      - uses: actions/setup-node@v3
+        name: Set up Node.js
+        with:
+          node-version: 16
       - uses: julia-actions/setup-julia@v1
         with:
           version: '1'
-      - run: |
-          julia --project=docs -e '
-            using Pkg
-            Pkg.upgrade_manifest()
-            Pkg.develop(PackageSpec(path=pwd()))
-            Pkg.instantiate()'              # Pkg.precompile()
-      - run: |
-          julia --project=docs -e '
-            using Documenter: doctest
-            using CamiXon
-            doctest(CamiXon)'
-      - run: julia --project=docs docs/make.jl
+      - uses: julia-actions/cache@v1
+      - name: Install dependencies
+        run: julia --project=docs/ -e 'using Pkg; 
+                Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
+      - name: Build the manual
+        run: julia --color=yes --project=docs/ docs/make.jl
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
