--- a/Project.toml
+++ b/Project.toml
@@ -5,6 +5,7 @@ version = "1.8.4"
 
 [deps]
 ### Unicode = "4ec0a83e-493e-50e2-b9ac-8f72acf5a8f5"
+CamiMath = "d302b3f7-c8ae-418d-9fc2-2c0a42bddda0"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 #IntervalSets = "8197267c-284f-5f27-9208-e0e47529a953"
