--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -66,9 +66,11 @@ jobs:
       - name: Install dependencies
         run: julia --project=docs/ -e 'using Pkg; 
                 Pkg.develop(PackageSpec(path=pwd())); Pkg.instantiate()'
+      - name: Set HTML_SIZE_LIMIT
+        run: |
+            echo "HTML_SIZE_LIMIT=300000" >> $GITHUB_ENV
       - name: Build the manual
         run: julia --color=yes --project=docs/ docs/make.jl
         env:
-          HTML_SIZE_LIMIT: 300000
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           DOCUMENTER_KEY: ${{ secrets.DOCUMENTER_KEY }}
