--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -45,11 +45,16 @@ jobs:
       matrix:
         format:
           - html
-    steps:
-      - uses: actions/checkout@v4
-        name: Check out repository
-        env:
-          CODECOV_TOKEN: ${{ secrets.CODECOV_TOKEN }}
+
+    steps:      
+      - uses: actions/checkout@main
+      - uses: codecov/codecov-action@v4
+        with:
+          fail_ci_if_error: true # optional (default = false)
+          token: ${{ secrets.CODECOV_TOKEN }} # required
+          verbose: true # optional (default = false)
+      #- uses: actions/checkout@v4
+      #  name: Check out repository
       - uses: actions/setup-node@v3
         name: Set up Node.js
         with:
