--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -48,9 +48,9 @@ jobs:
 
     steps:      
       - uses: actions/checkout@main
-      - uses: codecov/codecov-action@v4
+      - uses: codecov/codecov-action@v3
         with:
-          fail_ci_if_error: true # optional (default = false)
+          #fail_ci_if_error: true # optional (default = false)
           token: ${{ secrets.CODECOV_TOKEN }} # required
           verbose: true # optional (default = false)
       #- uses: actions/checkout@v4
