--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,13 +22,7 @@ jobs:
         arch:
           - x64
     steps:
-      #- uses: actions/checkout@v4      
-      - uses: actions/checkout@main
-      - uses: codecov/codecov-action@v3
-        with:
-          #fail_ci_if_error: true # optional (default = false)
-          token: ${{ secrets.CODECOV_TOKEN }} # required
-          verbose: true # optional (default = false)
+      - uses: actions/checkout@v4 
       - uses: julia-actions/setup-julia@v2
         with:
           version: ${{ matrix.version }}
@@ -39,7 +33,7 @@ jobs:
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v3
+      - uses: codecov/codecov-action@v4
         with:
           file: lcov.info
 
@@ -54,7 +48,7 @@ jobs:
 
     steps:      
       - uses: actions/checkout@main
-      - uses: codecov/codecov-action@v3
+      - uses: codecov/codecov-action@v4
         with:
           #fail_ci_if_error: true # optional (default = false)
           token: ${{ secrets.CODECOV_TOKEN }} # required
