--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -22,7 +22,7 @@ jobs:
         arch:
           - x64
     steps:
-      - uses: actions/checkout@v4 
+      - uses: actions/checkout@v4
       - uses: julia-actions/setup-julia@v2
         with:
           version: ${{ matrix.version }}
@@ -33,7 +33,7 @@ jobs:
       - uses: julia-actions/julia-buildpkg@v1
       - uses: julia-actions/julia-runtest@v1
       - uses: julia-actions/julia-processcoverage@v1
-      - uses: codecov/codecov-action@v4
+      - uses: codecov/codecov-action@v3
         with:
           file: lcov.info
 
@@ -46,15 +46,9 @@ jobs:
         format:
           - html
 
-    steps:      
-      - uses: actions/checkout@main
-      - uses: codecov/codecov-action@v4
-        with:
-          #fail_ci_if_error: true # optional (default = false)
-          token: ${{ secrets.CODECOV_TOKEN }} # required
-          verbose: true # optional (default = false)
-      #- uses: actions/checkout@v4
-      #  name: Check out repository
+    steps:
+      - uses: actions/checkout@v4
+        name: Check out repository
       - uses: actions/setup-node@v3
         name: Set up Node.js
         with:
