--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,3 @@
 {
-    "julia.executablePath": "C:\\Users\\walra\\AppData\\Local\\Programs\\Julia-1.11.1\\bin\\julia.exe",
-    "julia.environmentPath": "c:\\Users\\walra\\.julia\\dev\\CamiXon.jl"
+    "julia.executablePath": "C:\\Users\\walra\\AppData\\Local\\Programs\\Julia-1.11.1\\bin\\julia.exe"
 }
